# eigen-nn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binding.cpp  create_video.py  eigen-nn-test.cpp  test.py
eigen-nn/: module.hpp
eignn/: ad.hpp  encoder.hpp  hash.hpp  loss.hpp  module.hpp  optimizer.hpp  sampler.hpp  thread.hpp  training.hpp
